<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".Registration">

    <EditText
        android:id="@+id/registerfirstname"
        android:layout_width="384dp"
        android:layout_height="51dp"
        android:layout_margin="10dp"
        android:background="@drawable/round_border"
        android:ems="10"
        android:hint="@string/firstname"
        android:inputType="textPersonName"
        android:padding="16dp"
        android:textColor="#100E0E"
        android:textColorHint="#817B7B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.241" />

    <EditText
        android:id="@+id/registeremail"
        android:layout_width="384dp"
        android:layout_height="51dp"
        android:layout_margin="10dp"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/round_border"
        android:drawableLeft="@drawable/ic_email"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textColor="#1E1818"
        android:textColorHint="#958E8E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerlastname"
        app:layout_constraintVertical_bias="0.002" />

    <TextView
        android:id="@+id/btnforgot"
        android:layout_width="218dp"
        android:layout_height="35dp"
        android:layout_weight="1"
        android:text="Already Have An Account?"
        android:textColor="#6440A5"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.233"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnregcreateaccount"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtsigiin"
        android:layout_width="54dp"
        android:layout_height="32dp"
        android:text="@string/signin"
        android:textColor="#673AB7"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.775"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnregcreateaccount"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/registermobile"
        android:layout_width="383dp"
        android:layout_height="53dp"
        android:layout_margin="10dp"
        android:background="@drawable/round_border"
        android:drawableLeft="@drawable/icons8_phone_26px"
        android:ems="10"
        android:hint="@string/mobile"
        android:inputType="phone"
        android:padding="16dp"
        android:textColor="#1B1818"
        android:textColorHint="#7C7676"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registeremail"
        app:layout_constraintVertical_bias="0.003" />

    <EditText
        android:id="@+id/registerretypepassowrd"
        android:layout_width="385dp"
        android:layout_height="52dp"
        android:layout_margin="10dp"
        android:background="@drawable/round_border"
        android:drawableLeft="@drawable/ic_lock"
        android:ems="10"
        android:hint="@string/retypepassword"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColor="#100F0F"
        android:textColorHint="#8A8080"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerpassword"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/registerlastname"
        android:layout_width="382dp"
        android:layout_height="55dp"
        android:layout_margin="10dp"
        android:background="@drawable/round_border"
        android:ems="10"
        android:hint="@string/lastName"
        android:inputType="textPersonName"
        android:padding="16dp"
        android:textColor="#090707"
        android:textColorHint="#757171"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerfirstname"
        app:layout_constraintVertical_bias="0.004" />

    <Button
        android:id="@+id/btnregcreateaccount"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_margin="10dp"
        android:background="@drawable/round_bg"
        android:text="Create Account"
        android:textColor="#E8DCDC"
        android:textColorHint="#F1ECEC"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.684"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerretypepassowrd"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/registerpassword"
        android:layout_width="384dp"
        android:layout_height="51dp"
        android:layout_margin="10dp"
        android:background="@drawable/round_border"
        android:drawableLeft="@drawable/ic_lock"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColor="#0B0909"
        android:textColorHint="#8E8282"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registermobile"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/logins1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SHOW"
        android:textColor="#3F51B5"
        app:layout_constraintBottom_toTopOf="@+id/registerretypepassowrd"
        app:layout_constraintEnd_toEndOf="@+id/registerpassword"
        app:layout_constraintHorizontal_bias="0.953"
        app:layout_constraintStart_toStartOf="@+id/registerpassword"
        app:layout_constraintTop_toTopOf="@+id/registerpassword"
        app:layout_constraintVertical_bias="0.404" />

    <TextView
        android:id="@+id/s2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SHOW"
        android:textColor="#3F51B5"
        app:layout_constraintBottom_toBottomOf="@+id/registerretypepassowrd"
        app:layout_constraintEnd_toEndOf="@+id/registerretypepassowrd"
        app:layout_constraintHorizontal_bias="0.952"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerpassword"
        app:layout_constraintVertical_bias="0.627" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="423dp"
        android:layout_height="47dp"
        android:background="@drawable/wave"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="418dp"
        android:layout_height="104dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="129dp"
        android:layout_height="122dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.865"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:srcCompat="@drawable/dasd" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="178dp"
        android:layout_height="62dp"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/signup"
        android:textColor="#FFFFFF"
        android:textSize="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.283"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>