<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateProfile">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginEnd="288dp"
        android:layout_marginBottom="36dp"
        android:drawableLeft="@drawable/icons8_user_male_30px"
        android:text="@string/firstname"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.303"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.265" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginEnd="288dp"
        android:layout_marginBottom="36dp"
        android:drawableLeft="@drawable/icons8_user_male_30px"
        android:text="@string/lastName"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.272"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.416" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:drawableLeft="@drawable/icons8_phone_26px"
        android:text="@string/email"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.559" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:drawableLeft="@drawable/ic_email"
        android:text="@string/mobile"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.149"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.71" />

    <Button
        android:id="@+id/btnsave"
        android:layout_width="223dp"
        android:layout_height="52dp"
        android:layout_marginStart="165dp"
        android:layout_marginEnd="158dp"
        android:background="@drawable/round_bg"
        android:text="@string/save"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.614"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.843" />

    <EditText
        android:id="@+id/Firstname"
        android:layout_width="321dp"
        android:layout_height="50dp"
        android:layout_marginStart="41dp"
        android:layout_marginEnd="49dp"
        android:background="@drawable/round_border"
        android:ems="10"
        android:hint="@string/firstname"
        android:inputType="textPersonName"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.305" />

    <EditText
        android:id="@+id/lastname"
        android:layout_width="321dp"
        android:layout_height="50dp"
        android:layout_marginStart="41dp"
        android:layout_marginEnd="49dp"
        android:background="@drawable/round_border"
        android:ems="10"
        android:hint="@string/lastName"
        android:inputType="textPersonName"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.452" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="321dp"
        android:layout_height="50dp"
        android:layout_marginStart="41dp"
        android:layout_marginEnd="49dp"
        android:background="@drawable/round_border"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.591" />

    <EditText
        android:id="@+id/mobile"
        android:layout_width="321dp"
        android:layout_height="50dp"
        android:layout_marginStart="41dp"
        android:layout_marginEnd="49dp"
        android:background="@drawable/round_border"
        android:ems="10"
        android:hint="@string/mobile"
        android:inputType="textPersonName"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.738" />

    <Button
        android:id="@+id/btndelete"
        android:layout_width="218dp"
        android:layout_height="51dp"
        android:background="@drawable/round_bg"
        android:onClick="onClick"
        android:text="@string/deleteprofile"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.951" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="424dp"
        android:layout_height="104dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="430dp"
        android:layout_height="62dp"
        android:layout_marginTop="104dp"
        android:background="@drawable/wave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.315"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="126dp"
        android:layout_height="129dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="@+id/textView25"
        app:layout_constraintHorizontal_bias="0.812"
        app:layout_constraintStart_toStartOf="@+id/textView25"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dasd" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:fontFamily="sans-serif-medium"
        android:text="Update Profile"
        android:textColor="#FFEB3B"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.139"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView25" />

</androidx.constraintlayout.widget.ConstraintLayout>